# ros2_motion_challenge

./: Dockerfile  LICENSE  README.md
src/arm_controller/: CMakeLists.txt  package.xml
src/arm_controller/src/: position_controller_node.cpp
src/simple_robot_bringup/: CMakeLists.txt  package.xml
src/simple_robot_bringup/launch/: demo.launch.py
src/simple_robot_description/: CMakeLists.txt  package.xml
src/simple_robot_description/launch/: display.launch.py
src/simple_robot_description/urdf/: simple_robot.urdf
src/simple_robot_moveit_config/: CMakeLists.txt  package.xml
src/simple_robot_moveit_config/config/: piper.srdf  piper.urdf.xacro  simple_robot.urdf.xacro
src/simple_robot_moveit_config/launch/: demo.launch.py  simple_robot_moveit.launch.py
